Changing the compile verrsion back to 8